WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167974
[iOS] WKWebView doesn’t have implementations of UIResponderStandardEditActions that can be overridden
https://bugs.webkit.org/show_bug.cgi?id=167974
Summary
[iOS] WKWebView doesn’t have implementations of UIResponderStandardEditAction...
mitz
Reported
2017-02-07 18:05:28 PST
Because the child WKContentView implements the UIResponderStandardEditActions, it gets to be the target for those actions. This means that overrides of these methods in a WKWebView subclass normally don’t get called, and the subclass can’t effectively use -canPerformAction:withSender: and -targetForAction:withSender: for those actions.
Attachments
Implement action methods in WKWebView and forward to the content view
(4.83 KB, patch)
2017-02-08 11:24 PST
,
mitz
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2017-02-08 11:24:43 PST
Created
attachment 300927
[details]
Implement action methods in WKWebView and forward to the content view
WebKit Commit Bot
Comment 2
2017-02-08 11:25:53 PST
Attachment 300927
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:1085: preprocessor directives (e.g., #ifdef, #define, #import) should never be indented. [whitespace/indent] [4] ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:1091: preprocessor directives (e.g., #ifdef, #define, #import) should never be indented. [whitespace/indent] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 3
2017-02-08 13:38:56 PST
Fixed in <
https://trac.webkit.org/r211897
> with a build fix in <
https://trac.webkit.org/r211898
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug